--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Made some minor changes to suit my preferences. Hopefully nothing's broken.
+
+
 
 Welcome to the README file.
 ---------------------------
