Updated config file based on previous code changes.
Messed with the Makefile (read comments about potential breakage).

Added (pretty shady) support for multi-line rule definitions.

Added some of my thoughts to the doc's todo.rst.

Added a note to the TODO file, mentioning that there is another todo file.

Probably some other stuff I can't remember.

--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 For the latest TODO list,  see:
 
 https://wiki.quadrantsec.com/bin/view/Main/SaganTODO
+
+There is also a "TODO" section in the documentation.
