--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Made some minor changes to suit my preferences. Hopefully nothing's broken.
+Made some changes to suit my preferences. Stuff is definitely broken.
 
 
 
